k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-converter-service
  labels:
    app: currency-converter
spec:
  selector:
    app: currency-converter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
